--- a/icov.html
+++ b/icov.html
@@ -1163,7 +1163,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
         <h2>Redesign</h2>
         <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
         <div>
-        <a href="projects.html"> Terug naar home</a>
+        <a href="index.html"> Terug naar home</a>
             
         <a href="projects.html"> Andere projecten zien</a>
     </div>
@@ -1172,9 +1172,9 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     <footer>
         <h1>Contact</h1>
         <div>
-            <a href="">Linked In</a>
-            <a href=""> Email</a>
-            <a href="">GitHub</a>
+            <a href="https://www.linkedin.com/in/max-mulder/">Linked In</a>
+            <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
+            <a href="https://github.com/kilroy763">GitHub</a>
         </div>
    
     </footer>
