--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">         
     <link rel="stylesheet" href="css/var.css">
     <link rel="stylesheet" href="css/home.css">
     <title>Document</title>
@@ -1191,7 +1193,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
                     <h2>SKV Logo</h2>
                 </article>
             </a>
-            <a href="">
+            <a href="icov.html">
                 <article>
                     
                     <img src="img/icovMockup.png" alt="">
@@ -1217,9 +1219,9 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     <footer>
         <h1>Contact</h1>
         <div>
-            <a href="">Linked In</a>
-            <a href=""> Email</a>
-            <a href="">GitHub</a>
+            <a href="https://www.linkedin.com/in/max-mulder/">Linked In</a>
+            <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
+            <a href="https://github.com/kilroy763">GitHub</a>
         </div>
    
     </footer>
