--- a/projects.html
+++ b/projects.html
@@ -1163,7 +1163,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
                     <h2>SKV Logo</h2>
                 </article>
             </a>
-            <a href="">
+            <a href="icov.html">
                 <article>
                     
                     <img src="img/icovMockup.png" alt="">
@@ -1219,9 +1219,9 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     <footer>
         <h1>Contact</h1>
         <div>
-            <a href="">Linked In</a>
-            <a href=""> Email</a>
-            <a href="">GitHub</a>
+            <a href="https://www.linkedin.com/in/max-mulder/">Linked In</a>
+            <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
+            <a href="https://github.com/kilroy763">GitHub</a>
         </div>
    
     </footer>
