added sub pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">         
     <link rel="stylesheet" href="css/var.css">
     <link rel="stylesheet" href="css/home.css">
-    <title>Document</title>
+    <title>Portfolio Max Mulder</title>
 </head>
 <body>
     <header>
@@ -1154,7 +1154,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
         <h1>Wie ben ik?</h1>
         <img src="img/ikzelf.jpg" alt="">
     </div>
-        <p>Ik ben Max Mulder, 20 jaar oud. Ik ben een student met een goede kennis van HTML, CSS en JavaScrip. ik streef naar een semantisch correct en toegankelijk internet. Code die ik schrijf is bedoeld voor elk device, en is voor iedereen toegankelijk. Naast veel Front-End kennis heb ik ook verstand van UX en interactie. Daarnaast kan ik goed over vormgeving meedenken en verbeteringen bij een design inbrengen.
+        <p>Ik ben Max Mulder, 20 jaar oud. Ik ben een student met een goede kennis van HTML, CSS en JavaScript. ik streef naar een semantisch correct en toegankelijk internet. Code die ik schrijf is bedoeld voor elk device, en is voor iedereen toegankelijk. Naast veel Front-End kennis heb ik ook verstand van UX en interactie. Daarnaast kan ik goed over vormgeving meedenken en verbeteringen bij een design inbrengen.
         </p>
         <img src="img/ikzelf.jpg" alt="">
     </header>
@@ -1185,7 +1185,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
         <section>
             <h1>Projecten</h1>
             <div>
-            <a href="">
+            <a href="skv.html">
                 <article>
                     
                     <img src="img/skvmockup.png" alt="">
@@ -1201,7 +1201,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
                     <h2>iCOV redesign</h2>
                 </article>
             </a>
-            <a href="">
+            <a href="pwa.html">
                 <article>
                     
                     <img src="img/BrBamockup.png" alt="">
