--- a/speelgoedeiland.html
+++ b/speelgoedeiland.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/var.css">
     <link rel="stylesheet" href="css/detail.css">
-    <title>Projecten - iCOV</title>
+    <title>Projecten - Speelgoed Eiland</title>
 </head>
 <body>
     <header>
@@ -1153,12 +1153,12 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
         </div>
         </a>
         <div class="headingImg">
-             <img src="img/icovMockup.png" alt="">
+             <img src="img/SpeelgoedeilandMockup.png" alt="">
         </div>
        
     </header>
     <main>  
-         <h1>iCOV<span> <a href="https://github.com/kilroy763/iCOV-redesign" target="_blank">Code</a> | <a href="https://rickgroot.github.io/css-to-the-rescue-2021/menu.html" target="_blank">Live</a></span></h1>
+         <h1>Speelgoed Eiland</h1>
         <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
         <h2>Redesign</h2>
         <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
