--- a/skv.html
+++ b/skv.html
@@ -1158,11 +1158,18 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
        
     </header>
     <main>  
-         <h1>Vrije tijd</h1>
-        <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
-        <h2>Redesign</h2>
-        <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
-        <div>
+         <h1>Vrije tijd <span> <a href="https://kilroy763.prodibi.com/a/mrqql2vgx2ydzvo" target="_blank">Wallpapers</a> </span> </h1>
+         <p>In mijn vrije tijd vind ik het vaak leuk om bezig te zijn met designs, visuals of bijvoorbeeld wallpapers maken. 
+            Zo heb ik voor een goede vriend van mij een logo gemaakt die hij kan gebruiken op zijn auto livery in online league races. 
+            Ik heb hiervoor zijn initalen gebruikt en hier een logo mee gemaakt. 
+          </p>
+         <h2>Wallpapers</h2>
+         <p>Verders vind ik het nog leuk om bezig te zijn met het maken van wallpapers. Zo heb ik verschillende wallpapers gemaakt van 
+            bijvoorbeeld Formule 1 en series. Dit doe ik met Adobe Photoshop. Hier kan ik goed mee overweg.
+          </p>
+
+
+          <div>
         <a href="index.html"> Terug naar home</a>
             
         <a href="projects.html"> Andere projecten zien</a>
