--- a/icov.html
+++ b/icov.html
@@ -1158,11 +1158,21 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
        
     </header>
     <main>  
-         <h1>iCOV<span> <a href="https://github.com/kilroy763/iCOV-redesign" target="_blank">Code</a> | <a href="https://rickgroot.github.io/css-to-the-rescue-2021/menu.html" target="_blank">Live</a></span></h1>
-        <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
-        <h2>Redesign</h2>
-        <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
-        <div>
+         <h1>iCOV<span> <a href="https://github.com/kilroy763/iCOV-redesign" target="_blank">Code</a> | <a href="https://mbergevoet.github.io/iCOV-redesign/" target="_blank">Live</a></span></h1>
+         <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. 
+            Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders 
+            die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de 
+            bestrijding van onder meer witwassen, belastingontduiking en fraude.
+             Ik heb voor iCov gewerkt tijdens mijn korte stage van mijn opleiding. De stage viel 
+             precies in het begin van het corona tijdperk.
+          </p>
+         <h2>Redesign</h2>
+         <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met 
+            een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van 
+            iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van 
+            Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.
+          </p>
+          <div>
         <a href="index.html"> Terug naar home</a>
             
         <a href="projects.html"> Andere projecten zien</a>
