--- a/index.html
+++ b/index.html
@@ -1178,6 +1178,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
                   <p>JS libraries</p>
                   <p>Progressive Web Apps</p>
                   <p>Semantic</p>
+                  <p>Design</p>
               </div>
           </div>
         </section>
