--- a/pwa.html
+++ b/pwa.html
@@ -1159,10 +1159,17 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     </header>
     <main>  
          <h1>Progressive Web App<span> <a href="https://github.com/kilroy763/progressive-web-apps-2021" target="_blank">Code</a> | <a href="https://progressivewebappmaxmulder.herokuapp.com/" target="_blank">Live</a></span></h1>
-        <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
-        <h2>Redesign</h2>
-        <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
-        <div>
+        <p>Tijdens mijn Minor die ik heb gevolgd aan de Hogeschool van Amsterdam tijdens mijn CMD studie heb ik geleerd een progressive web app te maken.
+           Voor dit vak heb ik samen met Express en Node JS een server opgezet en uit een API gewenste data gefetched. Ik heb hiervoor gekozen om de movieDB API te gebruiken.
+
+        </p>
+
+         <h2>Manifest & Serviceworker</h2>
+        <p>
+           Aan dit project heb ik ook een Manifest.json gekoppeld en een serviceworker. Hierdoor is de applicatie offline te gebruiken en worden pagina's opgeslagen in de cache.
+           Ook is de applicatie op te slaan op de telefoon of desktop.
+        </p>
+         <div>
         <a href="index.html"> Terug naar home</a>
             
         <a href="projects.html"> Andere projecten zien</a>
