--- a/skv.html
+++ b/skv.html
@@ -1165,7 +1165,8 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
           </p>
          <h2>Wallpapers</h2>
          <p>Verders vind ik het nog leuk om bezig te zijn met het maken van wallpapers. Zo heb ik verschillende wallpapers gemaakt van 
-            bijvoorbeeld Formule 1 en series. Dit doe ik met Adobe Photoshop. Hier kan ik goed mee overweg.
+            bijvoorbeeld Formule 1 en series. Dit doe ik met Adobe Photoshop. Hier kan ik goed mee overweg. Verders heb ik nog gewerkt aan 
+            een logo voor een webshop en een album cover.
           </p>
 
 
