--- a/stixels.html
+++ b/stixels.html
@@ -1159,9 +1159,11 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     </header>
     <main>  
          <h1>Stixels<span> <a href="https://stixels.nl/" target="_blank">Live</a></span></h1>
-        <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
-        <h2>Redesign</h2>
-        <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
+        <p>
+            Stixels heb ik als opdracht gedaan voor een kennis. Hij begon een eigen zeilmakerij, hiervoor had hij een logo en website nodig. Mij leek het interessant om hier 
+            aan mee te helpen. Hierom heb ik een logo ontworpen, website gemaakt, een google profiel opgesteld en een visitiekaartje gemaakt. Dit was mijn eerste keer dat ik 
+            zo'n grote opdracht heb gedaan, toch is het naar mijn mening goed uitgepakt.
+        </p>
         <div>
         <a href="index.html"> Terug naar home</a>
             
