--- a/pe.html
+++ b/pe.html
@@ -1159,10 +1159,12 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     </header>
     <main>  
          <h1>Progressive Enhancement<span> <a href="https://github.com/kilroy763/browser-technologies-2021" target="_blank">Code</a> | <a href="https://btmaxmulder.herokuapp.com/home" target="_blank">Live</a></span></h1>
-        <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
-        <h2>Redesign</h2>
-        <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
-        <div>
+        <p>  Tijdens mijn Minor die ik heb gevolgd aan de Hogeschool van Amsterdam tijdens mijn CMD studie heb ik geleerd progressive enhancement toe te passen. Hiervoor heb ik 
+           een enquete gemaakt waarbij je vragen moet beantwoorden over de minor. Dit heb ik gemaakt in 3 lagen. Hierdoor is die voor alle gebruikers goed te gebruiken. Zo heb ik 
+           een HTML variant gemaakt, een HTMl/CSS variant en tot slot een HTML/CSS/JS variant. Ook heb ik voor dit project gebruik gemaakt van lighthouse. Hierbij heb ik alle pagina's zo goed
+           mogelijk geoptimaliseerd.
+        </p>
+         <div>
         <a href="index.html"> Terug naar home</a>
             
         <a href="projects.html"> Andere projecten zien</a>
