--- a/rtw.html
+++ b/rtw.html
@@ -1159,10 +1159,13 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     </header>
     <main>  
          <h1>Real Time Web<span> <a href="https://github.com/kilroy763/real-time-web-2021" target="_blank">Code</a> | <a href="https://formula1trivia.herokuapp.com/home" target="_blank">Live</a></span></h1>
-        <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
-        <h2>Redesign</h2>
-        <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
-        <div>
+         <p>
+            Tijdens mijn Minor die ik heb gevolgd aan de Hogeschool van Amsterdam tijdens mijn CMD studie heb ik gewerkt aan een Real Time Web App. Hierbij heb ik gewerkt
+            met socket.io. Hierbij heb ik vooral gekeken naar de basisfuncties van sockets en dit proberen te begrijpen. Hierbij heb ik een formule 1 quiz gemaakt. De quizvragen
+            worden random gefetched uit een API. De namen worden doorgegeven via de socket en de antwoorden ook, vervolgens worden de antwoorden via de socket gechecked en 
+            indien nodig worden er punten uitgedeelt.
+         </p>
+         <div>
         <a href="index.html"> Terug naar home</a>
             
         <a href="projects.html"> Andere projecten zien</a>
