--- a/speelgoedeiland.html
+++ b/speelgoedeiland.html
@@ -1159,10 +1159,12 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     </header>
     <main>  
          <h1>Speelgoed Eiland</h1>
-        <p>iCOV staat voor infobox Crimineel en Onverklaarbaar Vermogen. Het is een samenwerkingsverband van diverse overheidsorganisaties en toezichthouders die datagedreven rapportages samenstelt. Deze rapportages helpen de partners bij de bestrijding van onder meer witwassen, belastingontduiking en fraude.</p>
-        <h2>Redesign</h2>
-        <p>Als vervanging voor stage moest er een redesign worden gemaakt voor iCOV. Dit hebben we met een klein team studenten aangepakt en gerealiseerd. Het design moest voldoen aan de huisstijl van iCOV, en aansluiten bij de content en doelgroep. Het team bestond uit Merlijn Bergevoet, Fleur van Son, Max Mulder, en onze coach Tim Arisz. De website van iCOV is later vernieuwd met onze ontwerpen als basis.</p>
-        <div>
+         <p>Voor een collega op werk heb ik een logo gemaakt. Hij had een webshop alleen wilde graag dat die er beter uit zag. Ik had geen tijd om de hele website 
+            aan te pakken maar kon hem wel helpen met een logo wat hem al goed kon helpen. Hierom heb ik heel veel itteraties gemaakt en overlegd met hem om te kijken 
+            welk logo hem het beste leek. Hieruit hebben we een keuze gemaakt. 
+         </p>
+
+       <div>
         <a href="index.html"> Terug naar home</a>
             
         <a href="projects.html"> Andere projecten zien</a>
