--- a/glorydays.html
+++ b/glorydays.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/var.css">
     <link rel="stylesheet" href="css/detail.css">
-    <title>Projecten - Vrije tijd</title>
+    <title>Projecten - iCOV</title>
 </head>
 <body>
     <header>
@@ -1152,24 +1152,25 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
             </svg>
         </div>
         </a>
-        <div class="headingImg">
-             <img src="img/skvmockup.png" alt="">
+        <div class="headingImgGlory">
+             <img src="img/glorymockup.png" alt="">
         </div>
        
     </header>
     <main>  
-         <h1>Vrije tijd <span> <a href="https://kilroy763.prodibi.com/a/mrqql2vgx2ydzvo" target="_blank">Wallpapers</a> </span> </h1>
-         <p>In mijn vrije tijd vind ik het vaak leuk om bezig te zijn met designs, visuals of bijvoorbeeld wallpapers maken. 
-            Zo heb ik voor een goede vriend van mij een logo gemaakt die hij kan gebruiken op zijn auto livery in online league races. 
-            Ik heb hiervoor zijn initalen gebruikt en hier een logo mee gemaakt. 
+         <h1>Glory Days</h1>
+         <p>Glory Days is een project waar ik samen met Rick Groot aan heb gewerkt tijdens de 
+             "Meesterproef" van de minor web development die ik heb gevolgd aan de HvA. Hiervoor
+             moesten wij voor echte opdrachtgevers een opdracht uitvoeren. Het contact verliep dan ook 
+             alleen via de opdrachtgever, er zat geen docent tussen. Het gemaakte werk staat niet online 
+             omdat de opdrachtgevers dit liever niet hadden, ze willen namenlijk nog met het gemaakte werk verdergaan.
           </p>
-         <h2>Wallpapers</h2>
-         <p>Verders vind ik het nog leuk om bezig te zijn met het maken van wallpapers. Zo heb ik verschillende wallpapers gemaakt van 
-            bijvoorbeeld Formule 1 en series. Dit doe ik met Adobe Photoshop. Hier kan ik goed mee overweg. Verders heb ik nog gewerkt aan 
-            een logo voor een webshop en een album cover.
+         <h2>Dashboard</h2>
+         <p>De opdracht die wij kregen wat als volgt, maak een dashboard van onze huidige Glory Days iPhone applicatie.
+             Hierbij kwamen 2 aspecten aan bod, het upscalen van een huidige iPhone applicatie en het ontwerpen/indelen van
+             een dashboard. Wij hebben dit bereikt door verschillende redesigns te maken en elke dag hard te werken van 9 tot 16. 
+             Aan het eind van de opdracht waren zowel wij als de opdrachtgever erg tevreden met het geleverde werk.
           </p>
-
-
           <div>
         <a href="index.html"> Terug naar home</a>
             
@@ -1178,14 +1179,14 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     </main>
 
     <footer>
-      <h1>Contact</h1>
-      <div>
-          <a href="https://www.linkedin.com/in/max-mulder/">Linked In |</a>
-          <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
-          <a href="https://github.com/kilroy763">| GitHub</a>
-      </div>
- 
-  </footer>
+        <h1>Contact</h1>
+        <div>
+            <a href="https://www.linkedin.com/in/max-mulder/">Linked In |</a>
+            <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
+            <a href="https://github.com/kilroy763">| GitHub</a>
+        </div>
+   
+    </footer>
 
 
 </body>
