--- a/icov.html
+++ b/icov.html
@@ -1182,9 +1182,9 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     <footer>
         <h1>Contact</h1>
         <div>
-            <a href="https://www.linkedin.com/in/max-mulder/">Linked In</a>
+            <a href="https://www.linkedin.com/in/max-mulder/">Linked In |</a>
             <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
-            <a href="https://github.com/kilroy763">GitHub</a>
+            <a href="https://github.com/kilroy763">| GitHub</a>
         </div>
    
     </footer>
