--- a/index.html
+++ b/index.html
@@ -1150,17 +1150,17 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
                 </g>
             </g>
             </svg>
-            <div class="heading">
-        <h1>Wie ben ik?</h1>
-        <img src="img/ikzelf.jpg" alt="">
-    </div>
-        <p>Ik ben Max Mulder, 20 jaar oud. Ik ben een student met een goede kennis van HTML, CSS en JavaScript. ik streef naar een semantisch correct en toegankelijk internet. Code die ik schrijf is bedoeld voor elk device, en is voor iedereen toegankelijk. Naast veel Front-End kennis heb ik ook verstand van UX en interactie. Daarnaast kan ik goed over vormgeving meedenken en verbeteringen bij een design inbrengen.
-        </p>
-        <img src="img/ikzelf.jpg" alt="">
     </header>
 
 
     <main>
+      <div class="heading">
+         <h1>Wie ben ik?</h1>
+         <img src="img/ikzelf.jpg" alt="">
+     </div>
+         <p class="headerTekst">Ik ben Max Mulder, 20 jaar oud. Ik ben een student met een goede kennis van HTML, CSS en JavaScript. ik streef naar een semantisch correct en toegankelijk internet. Code die ik schrijf is bedoeld voor elk device, en is voor iedereen toegankelijk. Naast veel Front-End kennis heb ik ook verstand van UX en interactie. Daarnaast kan ik goed over vormgeving meedenken en verbeteringen bij een design inbrengen.
+         </p>
+
         <section>
             <h1 class="experienceHeader">Skills & ervaringen</h1>
             <div class="experience">
@@ -1185,7 +1185,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
 
         <section>
             <h1>Projecten</h1>
-            <div>
+            <div class="projects">
             <a href="skv.html">
                 <article>
                     
@@ -1212,7 +1212,7 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
             </a>
 
         </div>
-            <a href="projects.html"> Meer projecten zien</a>
+            <a href="projects.html" class="moreProjects"> Meer projecten zien</a>
             
         </section>
     </main>
@@ -1220,9 +1220,9 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
     <footer>
         <h1>Contact</h1>
         <div>
-            <a href="https://www.linkedin.com/in/max-mulder/">Linked In</a>
+            <a href="https://www.linkedin.com/in/max-mulder/">Linked In |</a>
             <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
-            <a href="https://github.com/kilroy763">GitHub</a>
+            <a href="https://github.com/kilroy763">| GitHub</a>
         </div>
    
     </footer>
