--- a/projects.html
+++ b/projects.html
@@ -1211,20 +1211,29 @@ FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq7FXYq//9k=</xmpgimg:image>
                     <h2>Stixels</h2>
                 </article>
             </a>
+            <a href="glorydays.html">
+               <article>
+                   
+                   <img src="img/glorydaysmockup.png" alt="">
+                   
+                   <h2>Glory Days</h2>
+               </article>
+           </a>
+
 
         </div>
 
     </main>
 
     <footer>
-        <h1>Contact</h1>
-        <div>
-            <a href="https://www.linkedin.com/in/max-mulder/">Linked In</a>
-            <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
-            <a href="https://github.com/kilroy763">GitHub</a>
-        </div>
-   
-    </footer>
+      <h1>Contact</h1>
+      <div>
+          <a href="https://www.linkedin.com/in/max-mulder/">Linked In |</a>
+          <a href = "mailto: itzmaxkiljan@hotmail.com.com"> itzmaxkiljan@hotmail.com</a>
+          <a href="https://github.com/kilroy763">| GitHub</a>
+      </div>
+ 
+  </footer>
 
 
 </body>
